--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@types/node": "^6.x.x",
+        "@types/stringify-object": "^3.1.1",
         "typescript": "2.3.x"
     }
 }
